# browser-stream

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build-and-release.yml  docker-publish.yml
docker/: entrypoint.sh
scripts/: fetch-sidecars.ps1  fetch-sidecars.sh
src/: chromium.rs  cli.rs  encoder.rs  error.rs  frame.rs  lib.rs  main.rs  retry.rs  rtmp.rs
tests/: cli.rs  ffmpeg_cmd.rs  frame.rs  retry.rs  rtmp.rs
