[package]
name = "browser-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
chromiumoxide = "0.8"
chromiumoxide_cdp = "0.8"
futures = "0.3"
image = { version = "0.25", default-features = true, features = ["jpeg", "png"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"

[dev-dependencies]
assert_matches = "1.5"
